update to day 1 lecture

--- a/day1review-speaker.html
+++ b/day1review-speaker.html
@@ -329,7 +329,8 @@
 <section id="join-this-presentation" class="slide level2">
 <h2>Join this presentation</h2>
 <center>
-<img src="qr.png"> https://www.precalcandtrig.net/lectures22/day1review.html
+<p><img src="qr.png"></p>
+https://kmcliff.github.io/day1review.html
 </center>
 </section>
 <section id="to-access-course-content" class="slide level2">
