--- a/day1review.html
+++ b/day1review.html
@@ -529,7 +529,7 @@ If your in-person Final Exam score is higher than your weighted average, your fi
 <h2>Combine and simplify completely <span class="math inline">\(\frac{3}{x+1}-\frac{4}{x}+1\)</span></h2>
 </section>
 <section id="combine-and-simplify-completely-fracfracyx-fracxyfrac1y-frac1x" class="slide level2">
-<h2>Combine and simplify completely <span class="math inline">\(\frac{\frac{y}{x}-\frac{x}{y}}{\frac{1}{y}-\frac{1}{x}\)</span></h2>
+<h2>Combine and simplify completely <span class="math inline">\(\frac{\frac{y}{x}-\frac{x}{y}}{\frac{1}{y}-\frac{1}{x}}\)</span></h2>
 </section>
 <section id="find-all-real-solutions-10x8108" class="slide level2">
 <h2>Find all real solutions <span class="math inline">\(|10x+8|=108\)</span></h2>
