--- a/sec41angles-speaker.html
+++ b/sec41angles-speaker.html
@@ -394,19 +394,72 @@ https://kmcliff.github.io/sec41angles.html
 <h2>Example</h2>
 <p>Convert <span class="math inline">\(\frac{\pi}{4}\)</span> to degrees</p>
 </section></section>
+<section>
 <section id="you-try-convert" class="title-slide slide level1 center">
 <h1>You try: convert</h1>
 <div class="columns">
 <div class="column" style="width:50%;">
-<p>A. <span class="math inline">\(60^\circ\)</span> to radians <br><br> <br><br> <br><br></p>
-<p>B. <span class="math inline">\(460^\circ\)</span> to radians <br><br> <br><br> <br><br></p>
-</div><div class="column" style="width:50%;">
-<p>C. <span class="math inline">\(\frac{3\pi}{2}\)</span> to degrees <br><br> <br><br> <br><br></p>
-<p>D. <span class="math inline">\(\frac{11\pi}{4}\)</span> to degrees <br><br> <br><br> <br><br></p>
+<p>A. <span class="math inline">\(60^\circ\)</span> to radians</p>
+<p>B. <span class="math inline">\(\frac{3\pi}{2}\)</span> to degrees</p>
+<iframe src="https://www.myopenmath.com/assess2/?cid=149285&amp;aid=10930890" width="100%" height="400px">
+</iframe>
+</div><div class="column" style="width:20%;">
+
+</div><div class="column" style="width:30%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+<p>desmos.com/scientific</p>
 </div>
 </div>
 </section>
+<section id="you-try-convert-1" class="slide level2">
+<h2>You try: convert</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p>A. <span class="math inline">\(60^\circ\)</span> to radians <br><br> <br><br> <br><br></p>
+<p>B. <span class="math inline">\(\frac{3\pi}{2}\)</span> to degrees <br><br> <br><br> <br><br></p>
+</div><div class="column" style="width:20%;">
 
+</div><div class="column" style="width:30%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+<p>desmos.com/scientific</p>
+</div>
+</div>
+</section></section>
+<section>
+<section id="you-try-convert-2" class="title-slide slide level1 center">
+<h1>You try: convert</h1>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p>C. <span class="math inline">\(\frac{11\pi}{4}\)</span> to degrees</p>
+<p>D. <span class="math inline">\(460^\circ\)</span> to radians</p>
+<iframe src="https://www.myopenmath.com/assess2/?cid=149285&amp;aid=10930890" width="100%" height="400px">
+</iframe>
+</div><div class="column" style="width:20%;">
+
+</div><div class="column" style="width:30%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+<p>desmos.com/scientific</p>
+</div>
+</div>
+</section>
+<section id="you-try-convert-3" class="slide level2">
+<h2>You try: convert</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p>C. <span class="math inline">\(\frac{11\pi}{4}\)</span> to degrees <br><br> <br><br> <br><br></p>
+<p>D. <span class="math inline">\(460^\circ\)</span> to radians <br><br> <br><br> <br><br></p>
+</div><div class="column" style="width:20%;">
+
+</div><div class="column" style="width:30%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+<p>desmos.com/scientific</p>
+</div>
+</div>
+</section></section>
 <section>
 <section id="coterminal-angles" class="title-slide slide level1 center">
 <h1>Coterminal Angles</h1>
@@ -422,10 +475,46 @@ https://kmcliff.github.io/sec41angles.html
 <section id="examples-find-the-smallest-positive-coterminal-angle." class="slide level2">
 <h2>Examples: Find the smallest, positive, coterminal angle.</h2>
 <div class="columns">
+<div class="column" style="width:80%;">
+<div class="columns">
 <div class="column" style="width:50%;">
+<p>A. <span class="math inline">\(900^\circ\)</span><br>
+C. <span class="math inline">\(-\frac{13\pi}{6}\)</span></p>
+</div><div class="column" style="width:50%;">
+<p>B. <span class="math inline">\(-430^\circ\)</span></p>
+<p>D. <span class="math inline">\(\frac{11\pi}{4}\)</span></p>
+</div>
+</div>
+<iframe src="https://www.myopenmath.com/assess2/?cid=149285&amp;aid=10930890" width="100%" height="400px">
+</iframe>
+</div><div class="column" style="width:20%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+<p>desmos.com/scientific</p>
+</div>
+</div>
+</section>
+<section id="examples-find-the-smallest-positive-coterminal-angle.-1" class="slide level2">
+<h2>Examples: Find the smallest, positive, coterminal angle.</h2>
+<div class="columns">
+<div class="column" style="width:80%;">
 <p>A. <span class="math inline">\(900^\circ\)</span> <br><br> <br><br> <br><br> B. <span class="math inline">\(-430^\circ\)</span> <br><br> <br><br> <br><br></p>
-</div><div class="column" style="width:&quot;50%;">
+</div><div class="column" style="width:20%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+<p>desmos.com/scientific</p>
+</div>
+</div>
+</section>
+<section id="examples-find-the-smallest-positive-coterminal-angle.-2" class="slide level2">
+<h2>Examples: Find the smallest, positive, coterminal angle.</h2>
+<div class="columns">
+<div class="column" style="width:80%;">
 <p>C. <span class="math inline">\(-\frac{13\pi}{6}\)</span> <br><br> <br><br> <br><br> D. <span class="math inline">\(\frac{11\pi}{4}\)</span> <br><br> <br><br> <br><br></p>
+</div><div class="column" style="width:20%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+<p>desmos.com/scientific</p>
 </div>
 </div>
 </section></section>
@@ -456,6 +545,162 @@ https://kmcliff.github.io/sec41angles.html
 <section id="example-find-the-sector-area-given-the-central-angle-and-radius" class="slide level2">
 <h2>Example: Find the sector area given the central angle and radius:</h2>
 <p>B. <span class="math inline">\(\theta = \frac{\pi}{6}\)</span>, <span class="math inline">\(r = 6\)</span> yd</p>
+</section></section>
+<section id="angular-speed" class="title-slide slide level1 center">
+<h1>Angular speed</h1>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img src="angular.webp"></p>
+</div><div class="column" style="width:50%;">
+<ul>
+<li class="fragment">Natalia’s angular speed describes how fast she’s spinning.</li>
+<li class="fragment">Measured in units like “revolutions per minutes” or “rotations per second”, etc.
+<ul>
+<li class="fragment">angle measure per time</li>
+</ul></li>
+</ul>
+</div>
+</div>
+</section>
+
+<section id="linear-speed" class="title-slide slide level1 center">
+<h1>Linear speed</h1>
+<div class="columns">
+<div class="column" style="width:50%;">
+<p><img src="linear.gif"> <img src="discus.gif"></p>
+</div><div class="column" style="width:50%;">
+<ul>
+<li class="fragment">Linear speed describes how fast a spinning object is moving in a straight line.</li>
+<li class="fragment">Linear speed also describes how fast an object on the edge of our circle would travel if we suddenly let go.</li>
+</ul>
+</div>
+</div>
+</section>
+
+<section>
+<section id="how-do-angular-and-linear-speed-relate" class="title-slide slide level1 center">
+<h1>How do angular and linear speed relate?</h1>
+<center>
+<u>Big idea:</u>
+</center>
+<p><span class="math display">\[v = \omega r\]</span></p>
+<ul>
+<li class="fragment">v is linear speed (distance per time)</li>
+<li class="fragment"><span class="math inline">\(\omega\)</span> (“omega”) is angular speed
+<ul>
+<li class="fragment"><span class="math inline">\(\omega\)</span> must be in radians per time</li>
+</ul></li>
+<li class="fragment">r is radius
+<ul>
+<li class="fragment">radius units should match distance units in linear speed</li>
+</ul></li>
+</ul>
+</section>
+<section id="example-2" class="slide level2">
+<h2>Example</h2>
+<p>A bicycle with 24-inch diameter wheels is traveling at 15 mi/h. Find the angular speed of the wheels in rad/min. How many revolutions per minute do the wheels make?</p>
+<center>
+<iframe src="https://www.menti.com/f2jp7yt8tv" width="100%" height="500" px="">
+</iframe>
+</center>
+</section>
+<section id="section-1" class="slide level2">
+<h2></h2>
+A bicycle with 24-inch diameter wheels is traveling at 15 mi/h. Find the angular speed of the wheels in rad/min. How many revolutions per minute do the wheels make?
+<center>
+<div style="position: relative; padding-bottom: 56.25%; padding-top: 35px; height: 0; overflow: hidden;">
+<iframe sandbox="allow-scripts allow-same-origin allow-presentation" allowfullscreen="true" allowtransparency="true" frameborder="0" height="315" src="https://www.mentimeter.com/app/presentation/dfa838c731f56f3d261a1a83f50a1b2d/e164db8e6c7d/embed" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" width="420">
+</iframe>
+</div>
+</center>
+</section>
+<section id="section-2" class="slide level2">
+<h2></h2>
+<p>A bicycle with 24-inch diameter wheels is traveling at 15 mi/h. Find the angular speed of the wheels in rad/min. How many revolutions per minute do the wheels make?</p>
+</section>
+<section id="section-3" class="slide level2">
+<h2></h2>
+</section></section>
+<section>
+<section id="example-3" class="title-slide slide level1 center">
+<h1>Example</h1>
+A car with 8.5 inch radius wheels is traveling at 25 ft/sec.&nbsp;How many revolutions per minute do the wheels make?
+<center>
+<iframe src="https://www.menti.com/52hdfpud9x" width="100%" height="400" px="">
+</iframe>
+</center>
+</section>
+<section id="section-4" class="slide level2">
+<h2></h2>
+A car with 8.5 inch radius wheels is traveling at 25 ft/sec.&nbsp;How many revolutions per minute do the wheels make?
+<center>
+<div style="position: relative; padding-bottom: 56.25%; padding-top: 35px; height: 0; overflow: hidden;">
+<iframe sandbox="allow-scripts allow-same-origin allow-presentation" allowfullscreen="true" allowtransparency="true" frameborder="0" height="315" src="https://www.mentimeter.com/app/presentation/2a0045a1ba20cd04b8bb607e984135fa/3d2a2eca4c3d/embed" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" width="420">
+</iframe>
+</div>
+</center>
+</section>
+<section id="section-5" class="slide level2">
+<h2></h2>
+<p>A car with 8.5 inch radius wheels is traveling at 25 ft/sec.&nbsp;How many revolutions per minute do the wheels make? Give your final answer accurate to 3 decimal places.</p>
+<div class="columns">
+<div class="column" style="width:50%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+</div><div class="column" style="width:50%;">
+<iframe src="https://www.menti.com/uw321qhtqr" width="100%" height="400" px="">
+</iframe>
+</div>
+</div>
+</section>
+<section id="section-6" class="slide level2">
+<h2></h2>
+<p>A car with 8.5 inch radius wheels is traveling at 25 ft/sec.&nbsp;How many revolutions per minute do the wheels make? Give your final answer accurate to 3 decimal places.</p>
+<div class="columns">
+<div class="column" style="width:50%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+</div><div class="column" style="width:50%;">
+<div style="position: relative; padding-bottom: 56.25%; padding-top: 35px; height: 0; overflow: hidden;">
+<iframe sandbox="allow-scripts allow-same-origin" allowfullscreen="true" allowtransparency="true" frameborder="0" height="315" src="https://www.mentimeter.com/app/presentation/0b2f570c462879db84176eb3b328ab7d/embed" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" width="420">
+</iframe>
+</div>
+</div>
+</div>
+</section>
+<section id="section-7" class="slide level2">
+<h2></h2>
+<p>A car with 8.5 inch radius wheels is traveling at 25 ft/sec.&nbsp;How many revolutions per minute do the wheels make? Give your final answer accurate to 3 decimal places.</p>
+<div class="columns">
+<div class="column" style="width:30%;">
+<iframe src="https://desmos.com/scientific" width="100%" height="400" px="">
+</iframe>
+</div><div class="column" style="width:50%;">
+
+</div>
+</div>
+</section></section>
+<section id="example-4" class="title-slide slide level1 center">
+<h1>Example</h1>
+<p>A gear of radius 9 cm spins one revolution in 17 seconds. What is the angular velocity of the gear (in rad/sec)? <br><br> <br><br> <br><br> A speck of dust flings off the edge of the wheel. What is its linear velocity? <br><br> <br><br> <br><br></p>
+</section>
+
+<section>
+<section id="example-5" class="title-slide slide level1 center">
+<h1>Example</h1>
+<p>A CD has diameter of 120 millimeters. When playing audio, the angular speed varies to keep the linear speed constant where the disc is being read. When reading along the outer edge of the disc, the angular speed is about 200 RPM (revolutions per minute). Find the linear speed. Give your answer accurate to two decimal places. <iframe src="https://www.menti.com/2wdjg2gp6h" width="100%" height="400" px=""></iframe></p>
+</section>
+<section id="section-8" class="slide level2">
+<h2></h2>
+A CD has diameter of 120 millimeters. When playing audio, the angular speed varies to keep the linear speed constant where the disc is being read. When reading along the outer edge of the disc, the angular speed is about 200 RPM (revolutions per minute). Find the linear speed. Give your answer accurate to two decimal places.
+<div style="position: relative; padding-bottom: 56.25%; padding-top: 35px; height: 0; overflow: hidden;">
+<iframe sandbox="allow-scripts allow-same-origin allow-presentation" allowfullscreen="true" allowtransparency="true" frameborder="0" height="315" src="https://www.mentimeter.com/app/presentation/68e14139d4c399863a3050005b87b2dd/22bad76dbf7b/embed" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" width="420">
+</iframe>
+</div>
+</section>
+<section id="section-9" class="slide level2">
+<h2></h2>
+<p>A CD has diameter of 120 millimeters. When playing audio, the angular speed varies to keep the linear speed constant where the disc is being read. When reading along the outer edge of the disc, the angular speed is about 200 RPM (revolutions per minute). Find the linear speed. Give your answer accurate to two decimal places. <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br></p>
 <div class="footer footer-default">
 
 </div>
@@ -496,7 +741,7 @@ https://kmcliff.github.io/sec41angles.html
 'autoAnimateUnmatched': true,
 'menu': {"side":"left","useTextContentForMissingTitles":true,"markers":false,"loadIcons":false,"custom":[{"title":"Tools","icon":"<i class=\"fas fa-gear\"></i>","content":"<ul class=\"slide-menu-items\">\n<li class=\"slide-tool-item active\" data-item=\"0\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.fullscreen(event)\"><kbd>f</kbd> Fullscreen</a></li>\n<li class=\"slide-tool-item\" data-item=\"1\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.speakerMode(event)\"><kbd>s</kbd> Speaker View</a></li>\n<li class=\"slide-tool-item\" data-item=\"2\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.overview(event)\"><kbd>o</kbd> Slide Overview</a></li>\n<li class=\"slide-tool-item\" data-item=\"3\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.overview(event)\"><kbd>e</kbd> PDF Export Mode</a></li>\n<li class=\"slide-tool-item\" data-item=\"4\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.toggleChalkboard(event)\"><kbd>b</kbd> Toggle Chalkboard</a></li>\n<li class=\"slide-tool-item\" data-item=\"5\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.toggleNotesCanvas(event)\"><kbd>c</kbd> Toggle Notes Canvas</a></li>\n<li class=\"slide-tool-item\" data-item=\"6\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.downloadDrawings(event)\"><kbd>d</kbd> Download Drawings</a></li>\n<li class=\"slide-tool-item\" data-item=\"7\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.keyboardHelp(event)\"><kbd>?</kbd> Keyboard Help</a></li>\n</ul>"}],"openButton":true},
 'chalkboard': {"buttons":true},
-'multiplex': {"secret":"16601729148093797360","id":"8750797725992eeb","url":"https://reveal-multiplex.glitch.me/"},
+'multiplex': {"secret":"16602226392133809853","id":"dc23a808edf65496","url":"https://reveal-multiplex.glitch.me/"},
 'smaller': false,
  
         // Display controls in the bottom right corner
