--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
   <div class="container">
   <div class="section-title">
   <h2>Math 1060 Lecture Notes</h2>
-  <p><a href = "day1review.html">Click here for Day 1 lecture</a></p>
+  <p>Click the following links to follow along with the lectures:</p>
+  <p><a href = "day1review.html">Day 1 lecture</a></p>
+  <p><a href = "sec41angles.html">Section 4.1: Angles</a></p>
   </div>
   </div>
   </section>
