--- a/day1review.html
+++ b/day1review.html
@@ -329,7 +329,7 @@
 <section id="join-this-presentation" class="slide level2">
 <h2>Join this presentation</h2>
 <center>
-<p><img src="qr.png"></p>
+<p><img src="/img/qr.png"></p>
 https://kmcliff.github.io/day1review.html
 </center>
 </section>
@@ -338,7 +338,7 @@ https://kmcliff.github.io/day1review.html
 <ul>
 <li class="fragment">Go to <a href="https://canvas.uccs.edu">Canvas</a> and login to our course.</li>
 <li class="fragment">Click on the “Click here first to enroll in MyOpenMath (free!)” link.</li>
-<li class="fragment"><img data-src="mom.JPG"></li>
+<li class="fragment"><img data-src="/img/mom.JPG"></li>
 </ul>
 </section>
 <section id="grades" class="slide level2" data-auto-animate="true">
