--- a/sec41angles.html
+++ b/sec41angles.html
@@ -329,7 +329,7 @@
 <section id="join-this-presentation" class="title-slide slide level1 center">
 <h1>Join this presentation</h1>
 <center>
-<p><img src=""></p>
+<p><img src="/img/qrsec41.png"></p>
 https://kmcliff.github.io/sec41angles.html
 </center>
 </section>
@@ -372,7 +372,7 @@ https://kmcliff.github.io/sec41angles.html
 <section id="section" class="slide level2">
 <h2></h2>
 
-<img src="radians.gif" class="r-stretch"></section></section>
+<img src="/img/radians.gif" class="r-stretch"></section></section>
 <section>
 <section id="converting-from-degrees-to-radians" class="title-slide slide level1 center">
 <h1>Converting from degrees to radians</h1>
@@ -550,7 +550,7 @@ C. <span class="math inline">\(-\frac{13\pi}{6}\)</span></p>
 <h1>Angular speed</h1>
 <div class="columns">
 <div class="column" style="width:50%;">
-<p><img src="angular.webp"></p>
+<p><img src="img/angular.webp"></p>
 </div><div class="column" style="width:50%;">
 <ul>
 <li class="fragment">Natalia’s angular speed describes how fast she’s spinning.</li>
@@ -567,7 +567,7 @@ C. <span class="math inline">\(-\frac{13\pi}{6}\)</span></p>
 <h1>Linear speed</h1>
 <div class="columns">
 <div class="column" style="width:50%;">
-<p><img src="linear.gif"> <img src="discus.gif"></p>
+<p><img src="img/linear.gif"> <img src="img/discus.gif"></p>
 </div><div class="column" style="width:50%;">
 <ul>
 <li class="fragment">Linear speed describes how fast a spinning object is moving in a straight line.</li>
