--- a/13502day1.html
+++ b/13502day1.html
@@ -453,7 +453,7 @@ If your in-person Final Exam score is higher than your weighted average, your fi
 <section id="the-plot-below-represents-the-function-fx.-evaluate-f3." class="slide level2">
 <h2>The plot below represents the function <span class="math inline">\(f(x)\)</span>. Evaluate <span class="math inline">\(f(3)\)</span>.</h2>
 <center>
-<img src="img/pgraph.JPG" width="40%" height="40%">
+<img src="/img/pgraph.JPG" width="40%" height="40%">
 </center>
 </section>
 <section id="when-fx-9x25x-4-evaluate-f-2." class="slide level2">
